--- a/index-mobile.html
+++ b/index-mobile.html
@@ -42,7 +42,38 @@
         <button>PARTIAMO!</button>
       </section>
     </header>
-    <main></main>
+    <main>
+      <section id="section1">
+        <h3>Tutti ti cercheranno</h3>
+        <p>
+          Sono 30.000 in Italia le posizioni di developer scoperte, scegli
+          quella che ti stimola di più.
+        </p>
+        <h3>Lavora dove vuoi</h3>
+        <p>Lavora da casa, in riva al mare o in montagna.</p>
+        <img src="./assets/images/notebook.jpg" alt="Notebook" />
+        <h3>Scegli il tuo ruolo</h3>
+        <p>Potrai scegliere se essere Azienda, Freelance o Startup.</p>
+        <h3>Lavoro in libertà</h3>
+        <p>
+          Non serve lavorare in ufficio per essere creatori di prodotti
+          digitali.
+        </p>
+      </section>
+      <section id="section2">
+        <h2>Epicode garantisce</h2>
+        <p id="p1">
+          "3 mesi intensivi di corso che cambieranno radicalmente la tua vita"
+        </p>
+        <p id="p2">Mario Rossi</p>
+        <p id="p3">CEO, Epicode</p>
+      </section>
+      <section id="section3">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+      </section>
+    </main>
     <footer>
       <h2>Contattaci</h2>
       <ul>
