--- a/index-mobile.html
+++ b/index-mobile.html
@@ -69,9 +69,23 @@
         <p id="p3">CEO, Epicode</p>
       </section>
       <section id="section3">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
+        <div id="block1">
+          <h3>Il tuo PC</h3>
+          <p>
+            Se vuoi diventare developer è l’unico strumento di cui hai bisogno.
+          </p>
+        </div>
+        <div id="block2">
+          <h3>Impara ora</h3>
+          <p>
+            Impara da chi diventerai tra qualche anno, e diventa una rockstar
+            come loro.
+          </p>
+        </div>
+        <div id="block3">
+          <h3>Lavora subito</h3>
+          <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
+        </div>
       </section>
     </main>
     <footer>
