Adds new updates (desktop version)

--- a/index-desktop.html
+++ b/index-desktop.html
@@ -10,7 +10,7 @@
     <!-- page reset -->
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <!-- css style -->
-    <link rel="stylesheet" href="./assets/css/style-mobile.css" />
+    <link rel="stylesheet" href="./assets/css/style-desktop.css" />
     <!-- link font-awesome -->
     <link
       rel="stylesheet"
@@ -31,7 +31,7 @@
   <body>
     <header>
       <div>
-        <img src="./assets/images/logo.png" alt="Logo Epicode" />
+        <img src="./assets/images/logo.png" alt="Logo Epicode" id="Logo" />
       </div>
       <section>
         <h1>Corso Web Developer</h1>
@@ -103,12 +103,12 @@
           <i class="fas fa-external-link-square-alt"></i> Via Appia 1 - 00100
           Roma (RM)
         </li>
-        <hr />
-        <p>
-          <i class="far fa-copyright"></i> 2021. Immagini di
-          <a href="Pixabay">Pixabay</a>.
-        </p>
       </ul>
+      <hr />
+      <p>
+        <i class="far fa-copyright"></i> 2021. Immagini di
+        <a href="Pixabay">Pixabay</a>.
+      </p>
     </footer>
   </body>
 </html>
